Remove unnecessary dependency, update the configuration from maven project event if the XDT configuration already exists

--- a/org.dugilos.m2e.nar/build.properties
+++ b/org.dugilos.m2e.nar/build.properties
@@ -4,7 +4,13 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                lifecycle-mapping-metadata.xml,\
-               library/plexus-archiver-1.0.jar,\
-               library/nar-maven-plugin-3.2.3.jar
+               library/nar-maven-plugin-3.2.3.jar,\
+               library/plexus-archiver-1.0.jar
 jars.extra.classpath = library/nar-maven-plugin-3.2.3.jar
 jars.compile.order = .
+src.includes = src/,\
+               pom.xml,\
+               plugin.xml,\
+               lifecycle-mapping-metadata.xml,\
+               META-INF/,\
+               build.properties
