--- a/tycho/plugins/pom.xml
+++ b/tycho/plugins/pom.xml
@@ -2,15 +2,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
+	
 	<parent>
-		<groupId>org.dugilos.m2e</groupId>
-		<artifactId>org.dugilos.m2e.nar.parent</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<groupId>org.dugilos.m2e-nar</groupId>
+		<artifactId>tycho-parent</artifactId>
+		<version>1.0.0-SNAPSHOT</version>
 	</parent>
-
-
-	<artifactId>org.dugilos.m2e.nar.feature</artifactId>
-	<packaging>eclipse-feature</packaging>
-
+	
+	<artifactId>plugin-parent</artifactId>
+	<packaging>pom</packaging>
+	
+	<modules>
+		<module>org.dugilos.m2e.nar</module>
+	</modules>
+	
 </project>
