Import depuis maven des librairies nécessaires

--- a/org.dugilos.m2e.nar/build.properties
+++ b/org.dugilos.m2e.nar/build.properties
@@ -4,13 +4,5 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                lifecycle-mapping-metadata.xml,\
-               library/nar-maven-plugin-3.5.0.jar,\
-               library/plexus-archiver-1.0.jar
-jars.extra.classpath = library/nar-maven-plugin-3.5.0.jar
-jars.compile.order = .
-src.includes = src/,\
-               pom.xml,\
-               plugin.xml,\
-               lifecycle-mapping-metadata.xml,\
-               META-INF/,\
-               build.properties
+               library/plexus-archiver.jar,\
+               library/nar-maven-plugin.jar
