--- a/org.dugilos.m2e.nar/plugin.xml
+++ b/org.dugilos.m2e.nar/plugin.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.0"?>
-<plugin
->
+<plugin>
    <extension
          point="org.eclipse.m2e.core.projectConfigurators">
       <configurator
@@ -13,31 +12,4 @@
    <extension
          point="org.eclipse.m2e.core.lifecycleMappingMetadataSource">
    </extension>
-   <extension
-         point="org.eclipse.m2e.core.lifecycleMappings">
-      <lifecycleMapping
-            class="org.dugilos.m2e.nar.internal.NarLifecycleMapping"
-            id="org.dugilos.m2e.nar.narLifecycleMapping"
-            name="NAR Lyfecycle mapping">
-      </lifecycleMapping>
-   </extension>
-   <!--
-   <extension
-         point="org.eclipse.m2e.core.lifecycleMappings">
-      <lifecycleMapping
-            class="org.dugilos.m2e.nar.internal.NarLifecycleMapping"
-            id="org.dugilos.m2e.nar.narLifecycleMapping"
-            packaging-type="jar">
-         <mojo
-            groupId="com.github.maven-nar"
-            artifactId="nar-maven-plugin"
-            versionRange="[3.2.3,)"
-            goals="nar-validate">
-            <configurator id="org.dugilos.m2e.nar.narConfigurator">
-            </configurator>
-         </mojo>
-      </lifecycleMapping>
-   </extension>
-   -->
-   
 </plugin>
