Copie des librairies maven dans le dossier target

--- a/org.dugilos.m2e.nar/build.properties
+++ b/org.dugilos.m2e.nar/build.properties
@@ -4,5 +4,5 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                lifecycle-mapping-metadata.xml,\
-               library/plexus-archiver.jar,\
-               library/nar-maven-plugin.jar
+               target/libraries/nar-maven-plugin.jar,\
+               target/libraries/plexus-archiver.jar
