--- a/org.dugilos.m2e.nar/build.properties
+++ b/org.dugilos.m2e.nar/build.properties
@@ -6,3 +6,4 @@ bin.includes = META-INF/,\
                lifecycle-mapping-metadata.xml,\
                target/libraries/nar-maven-plugin.jar,\
                target/libraries/plexus-archiver.jar
+src.includes = src/
