--- a/org.dugilos.m2e.nar/plugin.xml
+++ b/org.dugilos.m2e.nar/plugin.xml
@@ -4,12 +4,20 @@
    <extension
          point="org.eclipse.m2e.core.projectConfigurators">
       <configurator
-            class="org.dugilos.m2e.nar.internal.NarProjectConfigurator"
+            class="org.dugilos.m2e.nar.internal.CDTProjectConfigurator"
             id="org.dugilos.m2e.nar.narConfigurator"
-            name="NAR Project Configurator">
+            name="CDT Project Configurator">
       </configurator>
    </extension>
    <extension
          point="org.eclipse.m2e.core.lifecycleMappingMetadataSource">
+   </extension>
+   <extension
+         point="org.eclipse.m2e.core.lifecycleMappings">
+      <lifecycleMapping
+            class="org.dugilos.m2e.nar.internal.NarLifecycleMapping"
+            id="org.dugilos.m2e.nar.lifecycleMapping2"
+            name="Nar Lifecycle Mapping">
+      </lifecycleMapping>
    </extension>
 </plugin>
